# gpu-sharing-dapp-solidity-rust-python

./: README.md
contract/: .env.example  hardhat.config.js  package-lock.json  package.json
contract/artifacts/contracts/JobRegistry.sol/: JobRegistry.dbg.json  JobRegistry.json
contract/cache/: solidity-files-cache.json
contract/contracts/: JobRegistry.sol
contract/scripts/: deploy.js
frontend/: .env.example  package-lock.json  package.json
frontend/config/: index.js
frontend/hooks/: useJobRegistry.js
frontend/provider/: wagmiprovider.js
frontend/src/app/: layout.js  page.js
frontend/src/app/all-jobs/: page.jsx
frontend/src/app/node-register/: page.jsx
frontend/src/components/: ConnectBtn.jsx  JobSubmissionForm.jsx  Navbar.jsx  NodeRegistration.jsx  ProviderDashboard.jsx
frontend/src/components/ui/: label.jsx
node-agent/: .env.example  config.py  execute_job.py  main.py  requirements.txt  test.py
scheduler/: .env.example  .gitignore  Cargo.toml  jobs.json  nodes.json
scheduler/src/: config.rs  helper.rs  jobs.rs  main.rs  models.rs  nodes.rs  state.rs
